--- a/TODO.txt
+++ b/TODO.txt
@@ -1,8 +1,8 @@
 STILL TODO:
 
-* I've seen the card display fail to become active after the bot plays (on the ec2 box, but not on my laptop).  This has happened a couple of times.
+* Now that I've created a little CSS file, I should probably replace most of my "style" attributes with CSS classes.  Or whatever they call 'em.
 
-* Find another color for inactive card buttons, to make them much dimmer or less saturated or something; it's not blindingly obvious that they're inactive.  Maybe `--bs-btn-disabled-color`?
+* I've seen the card display fail to become active after the bot plays (on the ec2 box, but not on my laptop).  This has happened a couple of times.
 
 * Where it currently says "No bidding box 'cuz the auction is over", have it display, you know, the CONTRACT at this table :-|
 
@@ -64,6 +64,12 @@ STILL TODO:
   In particular, what tables they played at, and who else was at those tables.
 
 DONE:
+
+* Find another color for inactive card buttons, to make them much dimmer or less saturated or something; it's not blindingly obvious that they're inactive.  Maybe `--bs-btn-disabled-color` and `--bs-btn-disabled-bg`?
+
+  Now that I think about it, I might want the cards to look different during the auction than during the play.
+
+  During the auction, they've got to be super-easy to read, since after all, you can't bid if you don't know what you hold.  BUT they should probably also clearly be un-clickable, since you can't play during the auction!  Not sure how to handle this.
 
 * In the table list's auction status, don't just say "Incomplete"; say how many calls have been made.
 
