--- a/TODO.txt
+++ b/TODO.txt
@@ -1,10 +1,14 @@
 STILL TODO:
 
+* Big: write an API so that strangers can write their own bots.  Presumably using <https://www.django-rest-framework.org/>
+
+  Of course, switch my existing bot to use it, once it exists.
+
 * Now that I've created a little CSS file, I should probably replace most of my "style" attributes with CSS classes.  Or whatever they call 'em.
 
 * I've seen the card display fail to become active after the bot plays (on the ec2 box, but not on my laptop).  This has happened a couple of times.
 
-* Where it currently says "No bidding box 'cuz the auction is over", have it display, you know, the CONTRACT at this table :-|
+  Naturally it didn't repro the one time I actually tried to repro it.
 
 * Add a view for examining what you've done in the past -- what tables you've been at, and the associated transcripts.
 
@@ -18,10 +22,6 @@ STILL TODO:
   I.e., a proper tournament, with movements and shit.  Can't really score until we do this.
   <https://en.wikipedia.org/wiki/Duplicate_bridge>
   ("Teams"? "Pairs"? "Individual"?)
-
-* It looks like the played-a-card message is forcing the *auction log* to reload -- I've seen it jitter.
-
-* Make the auction record vanish once the opening lead has been made.
 
 * Try out <https://docs.djangoproject.com/en/5.1/ref/contrib/admin/admindocs/#module-django.contrib.admindocs>
 
@@ -64,6 +64,12 @@ STILL TODO:
   In particular, what tables they played at, and who else was at those tables.
 
 DONE:
+
+* Make the auction record vanish once the opening lead has been made.
+
+* It looks like the played-a-card message is forcing the *auction log* to reload -- I've seen it jitter.
+
+* Where it currently says "No bidding box 'cuz the auction is over", have it display, you know, the CONTRACT at this table :-|
 
 * Find another color for inactive card buttons, to make them much dimmer or less saturated or something; it's not blindingly obvious that they're inactive.  Maybe `--bs-btn-disabled-color` and `--bs-btn-disabled-bg`?
 
