--- a/TODO.txt
+++ b/TODO.txt
@@ -1,7 +1,5 @@
 STILL TODO:
 
-* How about an "I am human" toggle on each player's home page?  At least when DEBUG is True.
-
 * Not 100% sure what's going on, but it feels like: if *I* am making the opening lead -- i.e., declarer is to my right -- my cards buttons aren't active unless I reload the page.
 
 * Indicate the number of tricks taken by each side
@@ -81,6 +79,8 @@ STILL TODO:
 
 
 DONE:
+
+* Gaah! At least when debug is True, East's buttons are active *regardless* of who is logged in!  I've got four humans at one table, and a browser window for each; and (once I reload all the pages to work around the below bug) the buttons are active in each window!
 
 * How about an "I am human" toggle on each player's home page?  At least when DEBUG is True.
 
