--- a/TODO.txt
+++ b/TODO.txt
@@ -18,17 +18,16 @@ STILL TODO:
 
   I wonder: does the final fetch of some auction-related endpoint cause some JS to disappear, and it was that JS which was supposed to do the final fetch?
 
-  Looks like after the final pass, someone failed to refetch the bidding box partial:
+  Looks like after the final pass, megan -- the opening leader -- unsurprisingly failed to refetch the bidding box partial:
 
-    HTTP POST /call/12/ 200 [0.23, 127.0.0.1:52208]
-    HTTP GET /table/12/auction 200 [0.17, 127.0.0.1:52250]
-    HTTP GET /table/12/auction 200 [0.17, 127.0.0.1:52251]
-    HTTP GET /table/12/auction 200 [0.21, 127.0.0.1:52237]
-    HTTP GET /table/12/auction 200 [0.21, 127.0.0.1:52249]
-    HTTP GET /table/12/bidding-box 200 [0.10, 127.0.0.1:52237]
-    HTTP GET /table/12/bidding-box 200 [0.11, 127.0.0.1:52249]
-    HTTP GET /table/12/bidding-box 200 [0.16, 127.0.0.1:52250]
-    HTTP GET /table/12/four-hands 200 [0.22, 127.0.0.1:52208]
+    Got request from megan at 54030
+    Got request from bob at 54031
+    Got request from katherine at 54024
+    Got request from admin at 54010
+    HTTP GET /table/14/bidding-box 200 [0.10, 127.0.0.1:54024]
+    HTTP GET /table/14/bidding-box 200 [0.13, 127.0.0.1:54031]
+    HTTP GET /table/14/bidding-box 200 [0.13, 127.0.0.1:54010]
+    HTTP GET /table/14/four-hands 200 [0.21, 127.0.0.1:54030]
 
 
 * Indicate the number of tricks taken by each side
