--- a/TODO.txt
+++ b/TODO.txt
@@ -19,9 +19,7 @@ STILL TODO:
 
 * Maybe somehow visually distinguish cards of the trump suit? Glowing! Sparkles!
 
-* Customize the 404 page that it at least has a link to home.
-
-  Right now it's just "NOT FOUND" "The requested resource was not found on this server."
+* Maybe somehow visually distinguish whose turn it is?  It *is* possible to tell, but you gotta squint.
 
 * Big: write an API so that strangers can write their own bots.  Presumably using <https://www.django-rest-framework.org/>
 
@@ -82,6 +80,10 @@ STILL TODO:
 
 
 DONE:
+
+* Customize the 404 page that it at least has a link to home.
+
+  Right now it's just "NOT FOUND" "The requested resource was not found on this server."
 
 * Indicate the number of tricks taken by each side
 
