--- a/TODO.txt
+++ b/TODO.txt
@@ -2,7 +2,12 @@ IN PROGRESS:
 
 STILL TODO:
 
-* Display the dummy's cards with 100% opacity when we're in pokey-button mode
+* Maybe somehow visually distinguish whose turn it is?  It *is* possible to tell, but you gotta squint.
+  What do we want to know?
+  * Which cards can I, the human, play *right now*?
+  * What other cards are in my hand, and the dummy?
+  * If we're in a debug mode, what other cards are in the other hands?
+  * Whose turn is it to play?
 
 * "Claim" and "Concede" buttons, at least if you're declarer
 
@@ -18,8 +23,6 @@ STILL TODO:
 * Add a view for examining what you've done in the past -- what tables you've been at, and the associated transcripts.
 
 * Maybe somehow visually distinguish cards of the trump suit? Glowing! Sparkles!
-
-* Maybe somehow visually distinguish whose turn it is?  It *is* possible to tell, but you gotta squint.
 
 * Big: write an API so that strangers can write their own bots.  Presumably using <https://www.django-rest-framework.org/>
 
@@ -80,6 +83,8 @@ STILL TODO:
 
 
 DONE:
+
+* Display the dummy's cards with 100% opacity when we're in pokey-button mode
 
 * Customize the 404 page that it at least has a link to home.
 
