--- a/TODO.txt
+++ b/TODO.txt
@@ -2,6 +2,12 @@ IN PROGRESS:
 
 STILL TODO:
 
+* I've seen the card display fail to become active after the bot plays (on the ec2 box, but not on my laptop).  This has happened a couple of times.
+
+  Also, if all four hands are being played by the bot, sometimes it just appears to freeze; reloading the page resumes it. I saw nothing in the browser's console.
+
+  Naturally it didn't repro the one time I actually tried to repro it.
+
 * Pointless but perhaps fun: write a management command to backfill the (redundant) "won_its_trick" column.
 
 * "Claim" and "Concede" buttons, at least if you're declarer
@@ -24,10 +30,6 @@ STILL TODO:
   Of course, switch my existing bot to use it, once it exists.
 
 * Now that I've created a little CSS file, I should probably replace most of my "style" attributes with CSS classes.  Or whatever they call 'em.
-
-* I've seen the card display fail to become active after the bot plays (on the ec2 box, but not on my laptop).  This has happened a couple of times.
-
-  Naturally it didn't repro the one time I actually tried to repro it.
 
 * Consider timestamps for important stuff, in particular calls and plays.
 
