Idea about tempo

--- a/TODO.txt
+++ b/TODO.txt
@@ -9,6 +9,12 @@ IN PROGRESS:
 
 STILL TODO:
 
+* Crazy idea for enforcing an upper bound on a table's "tempo":
+
+  Return a 50whatever "throttled" response to any play or call post that comes too soon after the previous one.  Include a header that says when it's OK to try again.  That header's time should be e.g. one second in the future.  I might have to teach the browser to automatically retry; the alternative would be an annoying popup.  If the latter, at least I should show some visual thingy that makes it clear when it's OK to call or play.  (A shrinking bar, maybe?)
+
+  Perhaps allow each table to set its own tempo, down to some minimum that will keep the server unstressed, and the browsers capable of following along (1/2 second might be OK).
+
 * Pointless but perhaps fun: write a management command to backfill the (redundant) "won_its_trick" column.
 
 * "Claim" and "Concede" buttons, at least if you're declarer
