--- a/TODO.txt
+++ b/TODO.txt
@@ -1,19 +1,6 @@
 IN PROGRESS:
 
-* After each hand has been played:
-  - reveal the original cards
-  - compute the score, although I don't think I ever got around to teaching the library how to do that :-)
-  - Before the table vanishes, maybe the players can chat with each other?
-  - I guess let any player break up the table
-    - this would be tolerable if I did the "examining what you've done in the past" thing below, so that if the table vanishes on you, you can still examine the result at your leisure
-
-STILL TODO:
-
-* Crazy idea for enforcing an upper bound on a table's "tempo":
-
-  Return a 50whatever "throttled" response to any play or call post that comes too soon after the previous one.  Include a header that says when it's OK to try again.  That header's time should be e.g. one second in the future.  I might have to teach the browser to automatically retry; the alternative would be an annoying popup.  If the latter, at least I should show some visual thingy that makes it clear when it's OK to call or play.  (A shrinking bar, maybe?)
-
-  Perhaps allow each table to set its own tempo, down to some minimum that will keep the server unstressed, and the browsers capable of following along (1/2 second might be OK).
+* If the bot is playing two adjancent hands -- e.g., East and South -- it courteously waits a second in between those plays.  However, if I, Mister Human, play East, and the bot is playing South, it'll pounce the instant I make a play.  This is not only rude, but might be messing with the async crap in the browser (see below).
 
   This argues for ...
 
@@ -29,6 +16,21 @@ STILL TODO:
   What's odd is that *I* played the ♣4, and my LHO played the ♦K -- which means the listener saw the events out of order :-(
 
   I wonder if the listener somehow gets messed with when the browser reloads the partial?
+
+* After each hand has been played:
+  - reveal the original cards
+  - compute the score, although I don't think I ever got around to teaching the library how to do that :-)
+  - Before the table vanishes, maybe the players can chat with each other?
+  - I guess let any player break up the table
+    - this would be tolerable if I did the "examining what you've done in the past" thing below, so that if the table vanishes on you, you can still examine the result at your leisure
+
+STILL TODO:
+
+* Crazy idea for enforcing an upper bound on a table's "tempo":
+
+  Return a 50whatever "throttled" response to any play or call post that comes too soon after the previous one.  Include a header that says when it's OK to try again.  That header's time should be e.g. one second in the future.  I might have to teach the browser to automatically retry; the alternative would be an annoying popup.  If the latter, at least I should show some visual thingy that makes it clear when it's OK to call or play.  (A shrinking bar, maybe?)
+
+  Perhaps allow each table to set its own tempo, down to some minimum that will keep the server unstressed, and the browsers capable of following along (1/2 second might be OK).
 
 * Put the green highlight on the player whose turn it is to *call*, just as we do for when it's their turn to *play*
 
@@ -47,8 +49,6 @@ STILL TODO:
   Of course, switch my existing bot to use it, once it exists.
 
 * Now that I've created a little CSS file, I should probably replace most of my "style" attributes with CSS classes.  Or whatever they call 'em.
-
-* Consider timestamps for important stuff, in particular calls and plays.
 
 * Maybe a "Table" isn't worth modeling at all; instead model "games" or "hands" -- both current and past.  A "game" or a "hand" is pretty much what I'm now calling a Table -- four players plus a specific board, plus a possibly-complete transcript of what they did.
 
