Great Tew Part Deux

--- a/TODO.txt
+++ b/TODO.txt
@@ -7,6 +7,9 @@ IN PROGRESS:
 
 STILL TODO:
 
+* Rename the "is_human" field on the Player model, and change the text of the "make me a bot" button ...  The idea isn't
+  that a player "is a bot" or "is human", but rather, that the player wants the bot to call or play for them.
+
 * In the table list view, links should go directly to the archive, if the play at the table has finished.
 
 * In the table archive view:
